[gd_scene load_steps=5 format=3 uid="uid://57dm3yt6pnrv"]

[ext_resource type="Script" path="res://scenes/main_office.gd" id="1_16u8x"]
[ext_resource type="Texture2D" uid="uid://0wsfwaqioqx7" path="res://SceneArt/Main Office.png" id="2_pmksp"]
[ext_resource type="Script" path="res://scenes/item.gd" id="3_jrwfk"]
[ext_resource type="PackedScene" uid="uid://xkgc22deglng" path="res://scenes/core/cursor_item.tscn" id="4_54aww"]

[node name="MainOffice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_16u8x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 321.0
texture = ExtResource("2_pmksp")
expand_mode = 1
stretch_mode = 5

[node name="Item" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 164.0
offset_right = 296.0
offset_bottom = 204.0
script = ExtResource("3_jrwfk")
item_type = "MagnifyingGlass"

[node name="CursorItem" parent="." instance=ExtResource("4_54aww")]
layout_mode = 0

[node name="InputBlocker" type="Control" parent="." groups=["InputBlocker"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="Item" to="Item" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Item" to="Item" method="_on_mouse_exited"]
[connection signal="pressed" from="Item" to="Item" method="_on_pressed"]
